# mobile

./: .gitignore  .gitmodules  App.tsx  README.md  app.json  package-lock.json  package.json  shim.js
android/: build.gradle  settings.gradle
android/app/: BUCK  build.gradle
ios/: Podfile
ios/FiroMobileWallet/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
ios/FiroMobileWallet.xcodeproj/: project.pbxproj
ios/FiroMobileWallet.xcworkspace/: contents.xcworkspacedata
ios/FiroMobileWalletTests/: FiroMobileWalletTests.m
react-native-lelantus/: .gitignore  README.md  build-secp  build-secp-android.sh  build-secp-ios.sh  index.js  package.json  react-native-lelantus.podspec  shared.sh  update_libsigma_submodule.sh
react-native-lelantus/android/: CMakeLists.txt  build.gradle
react-native-lelantus/android/src/main/: AndroidManifest.xml
react-native-lelantus/android/src/main/java/org/firo/lelantus/: JoinSplitData.kt  Lelantus.kt  LelantusEntry.kt  LelantusModule.java  LelantusPackage.java
react-native-lelantus/android/src/main/jniLibs/: CoreJni.cpp  CoreJni.h  LelantusWrapper.h  Utils.cpp  Utils.h  liblelantus  openssl  org_firo_lelantus_Lelantus.cpp  org_firo_lelantus_Lelantus.h
react-native-lelantus/ios/: Lelantus.h  Lelantus.m  Lelantus.mm  LelantusWrapper.cpp  Utils.cpp  Utils.h  liblelantus  openssl
src/: FiroContext.tsx  Navigation.tsx  NavigationService.tsx  Themes.ts  app-storage.ts
src/components/: AddressBookList.tsx  AmountInput.tsx  BalanceCard.tsx  BottomNavigation.tsx  Button.tsx  Card.tsx  Confirmation.tsx  CreateAddressCard.tsx  EmptyState.tsx  FiroStatusBar.tsx  Input.tsx  Mnemonic.tsx  SavedAddressesList.tsx  SendAddress.tsx  Texts.tsx  Toolbar.tsx  TransactionList.tsx  (+1 more)
(+70 files in other folders)
